0.8 (05 August 2012)
===================
  * Improved argument parsing. Now the script is insensitive to the order of appearance of the options and handles correctly optional options parameters
  * Re-added possibility to specify the config file on the command line, which is now th recommanded way to do (facilitating script updates)
  * Fix "unary operator expected warning" in some rare cases

0.7.1 (9 July 2012)
===================
  * Adding 'duplicity-backup.conf' to .gitignore

0.7 (8 July 2012)
=================
  * Fix Issue #1 "Restore error if no target name"
  * Rewrite to force utilisation of an external config file to facilitate updates of the script in itself

0.6.1 (5 May 2012)
=================
Inclusion of two patches written by [shamer] + modified config file management.

  * Added option to use ssmtp to send mail [shamer]
  * Added lock file to prevent running multiple instances simultaneously [shamer]
  * Modified config file management (no more specified on the command line, must be specified as an parameter at the beginning of the script)
  * Fixed bad check_variables() behaviour when not using Amazon S3 storage backend without commenting AWS API keys

0.6 Version Six (4 May 2012)
============================
This is a rework of the script to include some github patches that were brought to the original script in order to make the script more generic than only Amazon S3 oriented and fix a few issues.

  * Added ability not to encrypt the backup [orkaa]
  * Added ability to use backup destination locations other than Amazon S3 [orkaa]
  * Added support for collection-status function [orkaa]
  * Added ability to specify variables in a config file [poppen]
  * Fixed broken european S3 buckets [thornomad]
  * Fixed sed issue [poppen]
  * Fixed incorrect handling of spaces un paths and filenames [hexwizard]
  * Renamed script to 'duplicity-backup'
  * Modified README file to reflect the renaming of the script
  * Cleaned up tabs in source file
