@@ -2,13 +2,15 @@ ABOUT THIS SCRIPT
 =================
 
 This bash script was designed to automate and simplify the remote backup process
-of duplicity on Amazon S3 primarily. Other backup destinations are possible.
+of duplicity on Amazon S3 primarily. Other backup destinations are possible
+(FTP, SFTP, SCP, rsync, file...), i.e. any of duplicity's supported outputs.
+
 After your script is configured, you can easily backup, restore, verify and
 clean (either via cron or manually) your data without having to remember lots of
 different command options and passphrases.
 
 Most importantly, you can easily backup the script and your gpg key in a
-convenient passphrase-encrypted file.  This comes in in handy if/when your
+convenient passphrase-encrypted file. This comes in in handy if/when your
 machine ever does go belly up.
 
 Optionally, you can set up an email address where the log file will be sent,
@@ -38,10 +40,10 @@ file, but make a copy of it and edit this one. Be sure to replace all the
 *foobar* values with your real ones. Almost every value needs to be configured
 in someway.
 
-You can use multiple copies of the script with different settings for different
-backup scenarios.  It is designed to run as a cron job and will log information
-to a text file (including remote file sizes, if you have s3cmd installed).  Be
-sure to make the script executable (chmod +x) before you hit the gas.
+You can use one copy of the script with different settings for different backup
+scenarios. It is designed to run as a cron job and will log information to a
+text file (including remote file sizes, if you have s3cmd installed). Be sure to
+make the script executable (chmod +x) before you hit the gas.
 
 REQUIREMENTS
 ============
@@ -57,16 +59,47 @@ CONFIGURATION
 
 The configuration takes place in a separate config file and is documented there.
 
+You want to copy duplicity-backup.conf.example to another place that suits your
+needs (for example /etc/duplicity-backup.conf)
+
 The script looks for its configuration by reading the config file specified by
-the command line option -c and fallback on the CONFIG parameter at the beggining
-of the script otherwise. 
+the command line option -c or --config (see USAGE)
 
-Be sure to specify it on the command line or to edit the CONFIG parameter in the
-script to match the actual location of your config file.
+If no config file was given on the command line, the script will try to find the
+file specified in the CONFIG parameter at the beggining of the script (defaults
+to "duplicity-backup.conf" in the script's directory).
 
-NOTE: to ease future updates of the script, you may want not to edit the script
-      at all and to specify systematically the path to your config file on the 
-      command line with the -c option.
+So be sure either:
+- to specify the configuration file path on the command line [recommended]
+- or to edit the CONFIG parameter in thescript to match the actual location of
+  your config file. [deprecated]
+
+NOTE: to ease future updates of the script, you may prefer NOT to edit the
+      script at all and to specify systematically the path to your config file
+      on the command line with the -c or --config option.
+
+USAGE
+=====
+
+  duplicity-backup.sh [options]
+
+  Options:
+    -c, --config CONFIG_FILE   specify the config file to use
+
+    -b, --backup               runs an incremental backup
+    -f, --full                 forces a full backup
+
+    -v, --verify               verifies the backup
+        --restore [PATH]       restores the entire backup to [path]
+        --restore-file [FILE_TO_RESTORE] [DESTINATION]
+                               restore a specific file
+
+    -l, --list-current-files   lists the files currently backed up in the archive
+    -s, --collection-status    show all the backup sets in the archive
+
+        --backup-script        automatically backup the script and secret key to
+                               the current working directory
+    -n, --dry-run              perform a trial run with no changes made
 
 COMMON USAGE EXAMPLES
 =====================
@@ -114,9 +147,11 @@ are having any problems with the script the first step is to determine if the
 script is generating an incorrect command or if duplicity itself is causing your
 error.
 
-To see exactly what is happening when you run duplicity-backup, head to the bottom
-of the configuration file and uncomment the `ECHO=$(which echo)` variable. This
-will stop the script from running and will, instead, output the generated
+To see exactly what is happening when you run duplicity-backup, either pass the
+option -n or --dry-run on the command line, or head to the bottom of the
+configuration file and uncomment the `ECHO=$(which echo)` variable. 
+
+This will stop the script from running and will, instead, output the generated
 command into your log file. You can then check to see if what is being generated
 is causing an error or if it is duplicity causing you woe.
 
